--- a/pom.xml
+++ b/pom.xml
@@ -37,5 +37,11 @@
         <version>4.13</version>
         <scope>test</scope>
     </dependency>
-</dependencies>
+        <!-- https://mvnrepository.com/artifact/org.jfree/jfreechart -->
+        <dependency>
+            <groupId>org.jfree</groupId>
+            <artifactId>jfreechart</artifactId>
+            <version>1.5.3</version>
+        </dependency>
+    </dependencies>
 </project>
